--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#book-a-table" class="book-a-table-btn scrollto">Carrinho</a>
+      <a href="https://mafia-da-batata.netlify.app/menu/" class="book-a-table-btn scrollto">Carrinho</a>
 
     </div>
   </header><!-- End Header -->
@@ -80,7 +80,7 @@
                   sabores únicos com o toque familia.</p>
                 <div>
                   <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto"> Menu</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Peça já!!</a>
+                  <a href="https://mafia-da-batata.netlify.app/menu/" class="btn-book animate__animated animate__fadeInUp scrollto">Peça já!!</a>
                 </div>
               </div>
             </div>
@@ -164,7 +164,6 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/batatas.js"></script>
   <script src="assets/js/produtos.js"></script>
-  <script src="assets/js/cart.js"></script>
   
 </body>
 
