--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <footer id="footer">
     <div class="container">
       <div class="social-links">
-        <a href="https://www.instagram.com/mafia_dabatata/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/mafia_dabatata/" class="instagram" target="_blank" rel="external"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Mafia da Batata</span></strong>. All Rights Reserved
