--- a/menu/index.html
+++ b/menu/index.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <div class="menu-teste">
-            <h1><a href="/" class="voltar-site">Máfia das Batatas</a> | Menu</h1>
+            <h1><a href="https://mafia-da-batata.netlify.app/" class="voltar-site">Máfia das Batatas</a> | Menu</h1>
         </div>
         <div class="potato-area"></div>
     </main>
